--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     
-<h1 style="text-align: center;">Hello, World!</h1> 
+    <h1 style="text-align: center;">Hello, World!</h1> 
 
-<div class="container"style="height: 65vh; width: 75%; margin: 0 auto;">
-    <img style="width: 100%; height: 100%; object-fit: cover;" src="images/pilt2.jpeg" alt="" id="image">
+    <div class="container"style="text-align: center; height: 65vh; width: 75%; margin: 0 auto;">
+        <img style="width: 100%; height: 100%; object-fit: cover;" src="images/pilt2.jpeg" alt="" id="image">
 
+        <button onclick="changeImage()">Click Me!</button>
 
-</div>
+    </div>
+    
+    <script src="app.js"></script>
 </body>
 </html>
